// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsRow render should render in amp 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app classes={{...}} items={{...}}>
        <TabsRow classes={{...}} items={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs theme={{...}} classes={{...}} value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" centered={false} fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function: value]} onChange={[Function: value]}>
                  <div>
                    <EventListener target="window" onResize={[Function: wrapper]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-11 RSFTabsRow-scroller-6 MuiTabs-scrollable-13" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab classes={{...}} label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} history={{...}} router={{...}} location={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 1
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab classes={{...}} label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} history={{...}} router={{...}} location={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 2
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                      <TabIndicator classes={{...}} style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                        <span className="TabIndicator-root-45 TabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with images 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app classes={{...}} items={{...}}>
        <TabsRow classes={{...}} items={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs theme={{...}} classes={{...}} value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" centered={false} fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function: value]} onChange={[Function: value]}>
                  <div>
                    <EventListener target="window" onResize={[Function: wrapper]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-11 RSFTabsRow-scroller-6 MuiTabs-scrollable-13" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab classes={{...}} label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                    <inject-Image classes={{...}} src="https://example.com" alt={[undefined]}>
                                      <Image classes={{...}} src="https://example.com" alt={[undefined]} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100}>
                                        <div className="RSFImage-root-34">
                                          <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                        </div>
                                      </Image>
                                    </inject-Image>
                                  </WithStyles(inject-Image)>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab classes={{...}} label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                    <inject-Image classes={{...}} src="https://example.com" alt={[undefined]}>
                                      <Image classes={{...}} src="https://example.com" alt={[undefined]} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100}>
                                        <div className="RSFImage-root-34">
                                          <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                        </div>
                                      </Image>
                                    </inject-Image>
                                  </WithStyles(inject-Image)>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                      <TabIndicator classes={{...}} style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                        <span className="TabIndicator-root-45 TabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with text 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app classes={{...}} items={{...}}>
        <TabsRow classes={{...}} items={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs theme={{...}} classes={{...}} value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" centered={false} fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function: value]} onChange={[Function: value]}>
                  <div>
                    <EventListener target="window" onResize={[Function: wrapper]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-11 RSFTabsRow-scroller-6 MuiTabs-scrollable-13" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label="Tab 1" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab classes={{...}} label="Tab 1" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      Tab 1
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label="Tab 2" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab classes={{...}} label="Tab 2" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      Tab 2
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                      <TabIndicator classes={{...}} style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                        <span className="TabIndicator-root-45 TabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with urls 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app classes={{...}} items={{...}}>
        <TabsRow classes={{...}} items={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs theme={{...}} classes={{...}} value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" centered={false} fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function: value]} onChange={[Function: value]}>
                  <div>
                    <EventListener target="window" onResize={[Function: wrapper]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="left" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-11 RSFTabsRow-scroller-6 MuiTabs-scrollable-13" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab classes={{...}} label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} history={{...}} router={{...}} location={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 1
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab classes={{...}} label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]}>
                            <ButtonBase classes={{...}} focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function: value]} centerRipple={false} disableRipple={false} tabIndex="0" type="button">
                              <button onBlur={[Function: handleEvent]} onFocus={[Function: value]} onKeyDown={[Function: value]} onKeyUp={[Function: value]} onMouseDown={[Function: handleEvent]} onMouseLeave={[Function: handleEvent]} onMouseUp={[Function: handleEvent]} onTouchEnd={[Function: handleEvent]} onTouchMove={[Function: handleEvent]} onTouchStart={[Function: handleEvent]} tabIndex="0" className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function: value]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <Link classes={{...}} className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} history={{...}} router={{...}} location={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 2
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <WithStyles(TouchRipple) innerRef={[Function: value]} center={false}>
                                  <TouchRipple classes={{...}} center={false}>
                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                      <span className="MuiTouchRipple-root-38" />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                      <TabIndicator classes={{...}} style={{...}} className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary">
                        <span className="TabIndicator-root-45 TabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton classes={{...}} direction="right" onClick={[Function: value]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                      <div className="MuiTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;
